<?xml version="1.0" encoding="utf-8"?>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Upload_vehicle_table">

        <TableRow
            android:id="@+id/tr_vin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/et_vin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_vin" >
                
            </EditText>

            <ImageButton
                android:id="@+id/imgbtn_vin_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:adjustViewBounds="false"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_vin"
                android:onClick="openCamera"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_barcode" />

        </TableRow>

        <TableRow
            android:id="@+id/tr_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/str_year"
                android:inputType="number"
                android:maxLength="4" >
                
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tr_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/str_make" >
                
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tr_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/st_model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/str_model" >
                
            </EditText>
        </TableRow>
        
        <TableRow
            android:id="@+id/tr_trim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/st_trim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/str_trim" >
                
            </EditText>
        </TableRow>
        
        <TableRow
            android:id="@+id/tr_image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/st_image1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str_image" >
                
            </EditText>

            <ImageButton
                android:id="@+id/btn_image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:contentDescription="@string/cd_browse_image"
                android:src="@drawable/ic_folder"
                android:onClick="browseFile"></ImageButton>
            
            <ImageButton
                android:id="@+id/imgbtn_image1_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:contentDescription="@string/cd_image"
                android:onClick="openCamera"
                android:src="@drawable/ic_camera" ></ImageButton>
        </TableRow>
        
        <TableRow
            android:id="@+id/tr_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/st_image2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="@string/str_image" >
                
            </EditText>

            <ImageButton
                android:id="@+id/btn_image2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="fill"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:contentDescription="@string/cd_browse_image"
                android:src="@drawable/ic_folder"
                android:onClick="browseFile"></ImageButton>
            
            <ImageButton
                android:id="@+id/imgbtn_image2_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="fill"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:contentDescription="@string/cd_image"
                android:onClick="openCamera"
                android:src="@drawable/ic_camera" ></ImageButton>
        </TableRow>
        
        <TableRow 
            android:id="@+id/tr_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button 
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_save"
                android:text="@string/btn_save"
                android:layout_weight="1">
            </Button>
            <Button
                android:drawableStart="@drawable/ic_reset"
                android:text="@string/btn_reset"
                android:layout_width="match_parent"
                android:layout_weight="1">
            </Button>
        </TableRow>
        
    </TableLayout>
